Imported gnocl-0.9.95-30-06-11.tar.bz2.
2011-06-30:
	gnocl::entry
   		o added options
   			-dropTargets, -dragTargets, -onDropData, -onDragData
2011-06-24
	gnocl::text
		o new tag -underline option
			'error'
2011-06-15
	gnocl::text
		o new widget options
		   -hasToolTip, -onQueryTooltip
		o new tag option
		   -data
2011-06-11
	gnocl::image
		modified code to accomodate new PixbufParams data structure
2011-06-02
	gnocl::pibuf
		implemented PixbufParams data structure

--- a/src/Makefile
+++ b/src/Makefile
@@ -58,6 +58,7 @@ GTK_OBJ := \
 	fileChooser.o \
 	fileChooserButton.o \
 	fileFilter.o \
+	fill.o \
 	fixed.o \
 	fontButton.o \
 	fontSelection.o \
@@ -161,10 +162,10 @@ test:
 
 devinstall:
 	ar cr libgnocl-$(VERSION).a $(GTK_OBJ)
-	cp gnocl.h /usr/include
+	cp gnocl*.h /usr/include
 	cp libgnocl*.a /usr/lib
 	rm libgnocl*.a
 
 devuninstall:
-	rm /usr/include/gnocl.h
+	rm /usr/include/gnocl*.h
 	rm /usr/lib/libgnocl*.a
