Imported gnocl-0.9.95-29-10-11.tar.bz2.
2011-11-27
	gnocl::fileChooserDialog
		o new option -fileFilters
2011-08-20
    gnocl::exec
        o new command, similar to Tcl exec but allows script execution
          when background task exits.

--- a/src/Makefile
+++ b/src/Makefile
@@ -115,6 +115,7 @@ GTK_OBJ := \
 	table.o \
 	text.o \
 	textBuffer.o \
+    textTag.o \
 	./textPango/gtktextviewpango.o \
 	./textUndo/undo_manager.o \
 	./textUndo/undo_view.o \
