Imported gnocl-0.9.96-20-04-12.tar.bz2.
	gnocl::box
		o new command
			remove

		o new options

   gnocl::menuItem
		o new option
			-data
		o net command
			cget (partial implementation)

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,7 @@ ADDCFLAGS := -DVERSION=\"$(VERSION)\" \
 	-I/usr/include/libglade-2.0
 
 LIBS := $(shell pkg-config \
-	--libs gtk+-2.0 libglade-2.0 libnotify gtkimageview) \
+	--libs gtk+-2.0 libglade-2.0 libnotify) \
 	-ltclstub$(TCL_VERSION)
 
 GTK_OBJ := \
@@ -69,8 +69,6 @@ GTK_OBJ := \
 	iconView.o \
 	infoBar.o \
 	inputDialog.o \
-	./imageViewer/gtk-image-viewer-fixed.o \
-	imageViewer.o \
 	image.o \
 	itemGroup.o \
 	label.o \
