Imported gnocl-0.9.96-16-02-13.tar.bz2.

--- a/src/Makefile
+++ b/src/Makefile
@@ -72,6 +72,8 @@ GTK_OBJ := \
 	labelEntry.o \
 	language.o \
 	layout.o \
+	./level/gtklevel.o \
+	level.o \
 	linkButton.o \
 	keyfile.o \
 	menu.o \
