Imported gnocl-0.9.96-11-03-13.tar.bz2.
2013-03:
	new widget
		o gnocl::richTextToolBar
			added core code for gnocl megawidget to supply complete
			buttons set for editing pango-markup in a gnocl::text widget

	new widget
		o gnocl::level

--- a/src/Makefile
+++ b/src/Makefile
@@ -102,6 +102,7 @@ GTK_OBJ := \
 	recentChooser.o \
 	recentChooserDialog.o \
 	recentManager.o \
+	richTextToolBar.o \
 	ruler.o \
 	scale.o \
 	scaleButton.o \
