Imported gnocl-0.9.96-04-01-14.tar.bz2.
2014-01:
	gnocl::toolbar
		o separated source code for the creation of toolbar items into
			individual modules.
		o -onToggled functionality now working properly for relevant items.
	gnocl::menu
		o new command
			attach

--- a/src/Makefile
+++ b/src/Makefile
@@ -65,6 +65,7 @@ GTK_OBJ := \
 	helperFuncs.o \
 	iconView.o \
 	infoBar.o \
+	inheritedOptions.o \
 	inputDialog.o \
 	image.o \
 	itemGroup.o \
@@ -129,6 +130,9 @@ GTK_OBJ := \
 	treeList.o \
 	volumeButton.o \
 	window.o \
+	./toolbar/toggleButton.o \
+	./toolbar/radioButton.o \
+	./toolbar/menuButton.o \	
 
 .PHONY: all $(PACKAGE_NAME) clean install uninstall reinstall devinstall devuninstall
 
