Imported gnocl-0.9.96-09-05-14.tar.bz2.

--- a/src/Makefile
+++ b/src/Makefile
@@ -119,6 +119,7 @@ GTK_OBJ := \
 	text.o \
 	textBuffer.o \
 	./textPango/gtktextviewpango.o \
+	text-rollover-tags.o \
 	parseMarkup.o \
 	./textUndo/undo_manager.o \
 	./textUndo/undo_view.o \
